--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "API Rest using express.js",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joseperuby/-express-workshop"
   },
   "keywords": [
     "api",
@@ -14,7 +20,12 @@
   ],
   "author": "Pepe",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/joseperuby/-express-workshop/issues"
+  },
+  "homepage": "https://github.com/joseperuby/-express-workshop#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
   }
 }
