--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/joseperuby/-express-workshop#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
   }
 }
